--- a/src/styles.css
+++ b/src/styles.css
@@ -58,9 +58,9 @@ body {
   border-radius: 0.25rem;
   text-transform: uppercase;
   font-style: normal;
-  font-weight: 400;
-  padding-left: 25px;
-  padding-right: 25px;
+  font-weight: 500;
+  padding-left: 24px;
+  padding-right: 24px;
   color: #fff;
   -webkit-clip-path: polygon(
     0 0,
@@ -87,14 +87,16 @@ body {
   line-height: 14px;
   letter-spacing: 1.2px;
   transition: 0.2s 0.1s;
-  background-image: linear-gradient(90deg, #000000,  #E50914);
+  /* background-image: linear-gradient(90deg, #000000,  #E50914); */
+  background-color: #e50914;
   border: 0 solid;
   overflow: hidden;
 }
 
-.themeButton:hover {
+/* .themeButton:hover {
   cursor: pointer;
   transition: all 0.3s ease-in;
+  background-image: linear-gradient(90deg, #000000,  #E50914);
   padding-right: 30px;
   padding-left: 30px;
-}
+} */
