--- a/src/styles.css
+++ b/src/styles.css
@@ -93,6 +93,13 @@ body {
   overflow: hidden;
 }
 
+.custom-shadow {
+  box-shadow: 10px 0 20px -5px rgba(229, 9, 20, 0.5),
+    -10px 0 20px -5px rgba(58, 134, 255, 0.5) ,
+    0 10px 20px -5px rgba(229, 9, 20, 0.5),
+    0 -10px 20px -5px rgba(128, 128, 128, 0.5); 
+}
+
 /* .themeButton:hover {
   cursor: pointer;
   transition: all 0.3s ease-in;
