--- a/src/styles.css
+++ b/src/styles.css
@@ -10,19 +10,13 @@ body {
   width: 100%;
 }
 body {
-  overflow-x: hidden;
-  
+  overflow-x: auto;
 }
 
 /* globals.css or any CSS file */
-.scrollbar-hide::-webkit-scrollbar {
-  display: none;
-}
 
-.scrollbar-hide {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
-}
+
+
 
 .navbar-speedometer {
   position: relative;
